# ngram-kit

./: README.md  main.bbl  main.tex  names.tex  occupations.tex  pyproject.toml  setup.py  wlscirep.cls
notebooks/: change_analysis_workflow.ipynb  coha_change_analysis_workflow.ipynb  coha_training_workflow.ipynb  davies_acquisition_workflow.ipynb  eng_multigrams_workflow.ipynb  eng_unigrams_workflow.ipynb  ngrams_change_analysis_workflow.ipynb  training_workflow.ipynb
src/davieskit/davies_acquire/: core.py  encoding.py  tokenizer.py  writer.py
src/davieskit/davies_filter/: __init__.py  config.py  core.py  whitelist.py
src/davieskit/davies_filter/filters/: __init__.py  core_cy.c  core_cy.pyx  processor_factory.py
src/ngramkit/common/: w2v_model.py
src/ngramkit/ngram_acquire/: core.py  executor.py  worker.py
src/ngramkit/ngram_acquire/io/: parse.py
src/ngramkit/ngram_analyze/: average_relatedness_by_year.py  cosine_similarity_time_series.py  semantic_drift.py  weat_time_series.py
src/ngramkit/ngram_filter/: config.py  year_binning.py
src/ngramkit/ngram_filter/filters/: core_cy.c  core_cy.cpp  core_cy.pyx  processor_factory.py
src/ngramkit/ngram_filter/pipeline/: orchestrator.py  setup.py  worker.py
src/ngramkit/ngram_pivot/pipeline/: orchestrator.py
src/ngramkit/ngram_train/word2vec/: __init__.py  normalize_and_align_models.py  regression_analysis.py  train.py
src/ngramkit/tracking/: database.py  progress_tracker.py  work_unit_store.py
src/ngramprep/ngram_filter/: config.py
src/ngramprep/ngram_filter/pipeline/: display.py
src/train/word2vec/: evaluate.py  model.py  normalize_and_align_models.py  train.py
