[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "ngram-kit"
version = "0.1.0"
description = "A toolkit for n-gram data preparation and training"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Eric Knowles", email = "edk202@nyu.edu"},
]
maintainers = [
    {name = "Eric Knowles", email = "edk202@nyu.edu"},
]
keywords = ["nlp", "ngram", "preprocessing", "text-analysis", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.20",
    "Cython>=3.0",
    "spacy>=3.0",
    "spacy-lookups-data>=1.0.0",
    "stop-words>=2018.7.23",
    "setproctitle>=1.3.0",
    "tqdm>=4.64.0",
    "rocks-shim @ https://github.com/eric-d-knowles/rocks-shim/releases/download/0.3.0/rocks_shim-0.3.0-py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl",
    "pyenchant>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ngram-kit"
Documentation = "https://github.com/yourusername/ngram-kit#readme"
Repository = "https://github.com/yourusername/ngram-kit.git"
"Bug Tracker" = "https://github.com/yourusername/ngram-kit/issues"
Changelog = "https://github.com/yourusername/ngram-kit/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.c", "*.h"]

# Build configuration for Cython extensions
[tool.cython-lint]
max-line-length = 88

# Optional: Configure other tools
[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]